Fixed color readability for header

--- a/_sass/foundation/_settings.scss
+++ b/_sass/foundation/_settings.scss
@@ -1393,10 +1393,10 @@ $topbar-height: rem-calc(100);
 // $topbar-title-font-size: rem-calc(17);
 
 // Set the link colors and styles for top-level nav
-$topbar-link-color: #999;
-$topbar-link-color-hover: #888;
-$topbar-link-color-active: #888;
-$topbar-link-color-active-hover: #888;
+$topbar-link-color: #000;
+$topbar-link-color-hover: #999;
+$topbar-link-color-active: #999;
+$topbar-link-color-active-hover: #999;
 // $topbar-link-weight: $font-weight-normal;
 $topbar-link-font-size: rem-calc(14);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
